fixed z-index on applets

--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,7 @@ textarea {
 /* LOL */
 
 #social-applets {
+  z-index: 100;
   position: absolute;
   top: 0;
   right: 0;
